# the-lord-of-the-skills

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEDUP.md  FAQ.md  FRAMEWORKS.md  KINGDOMS.md  LICENSE  MANIFEST.md  PUBLISHING.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
catalogs/: Lord_of_the_Skills_Index.xlsx
cli/: README.md  __init__.py  detect.py  fetch.py  generate_index.py  lotr.py  match.py  place.py  requirements.txt
crawler/: README.md  build_package.py  classify.py  crawler.py  crawler_antigravity.py  dedup.py  generate_excel.py  generate_pdf.py  lord_of_the_skills.cron  pyproject.toml  refresh_lord_of_skills.sh  requirements.txt
docs/: CREDITS.md  MAP_OF_THE_KINGDOMS.md  SKILL_INDEX.md
docs/promotion/: PROMOTION_POSTS.md
skills/fangorn/: README.md
skills/fangorn/antigravity/NhatMinh171003__multi-agent-antigravity/: setup_workers.ps1
skills/fangorn/antigravity/Spartanx72__Antigravity-Master-Prompt-Source/: project-start-checklist.md  robotics-engineer.md
skills/fangorn/antigravity/Zaious__Antigravity-Skills-Chronicle/: README.md
skills/fangorn/claude-code/CodeShuX__tokenwise/: SKILL.md
skills/fangorn/claude-code/FluxonLab__Skillry/: SKILL.md
skills/fangorn/claude-code/Haaaiawd__ANWS/: SKILL.md
skills/fangorn/claude-code/bakw00ds__yakos/: SKILL.md  performance-auditor.md
skills/fangorn/cursor/hoangatg__cursor-rules-collection/: canonical__langchain.mdc
skills/fangorn/general/FluxonLab__Skillry/: gamedev-economy-designer.md
skills/fangorn/general/Fmarzochi__EGC/: sessions.md  silent-failure-hunter.md
skills/fangorn/general/Haaaiawd__ANWS/: change.md  craft.md  design-system.md  genesis.md
skills/fangorn/general/JasonCheroske__Lab-OS/: NON_STRUCTURAL_NOTE_TEMPLATE.md  STRUCTURAL_DOC_TEMPLATE.md
skills/fangorn/general/Konsing__mcp-multi-agents/: CLAUDE.md
skills/fangorn/general/SoftMissT__tudo-sobre-vibe-coding/: CARDINAL.soul.md  DOKJA.soul.md  POWER.soul.md  TESSIA.soul.md
skills/fangorn/general/StringKe__std-ai/: release.yml
skills/fangorn/general/andreskull__spec-driven-ai-coding/: promote.md
skills/fangorn/general/bakw00ds__yakos/: backend.md  bug_report.md  multi-dev-coord.md  rag-architect.md  retrospective-discipline.md  test-runner.md
skills/gondor/: README.md
skills/gondor/aider/bakw00ds__yakos/: pr-conventions.md
skills/gondor/antigravity/016__Antigravity-Better/: anti-better-worker.md
skills/gondor/antigravity/AashmanShukla3223__Antigravity-and-OpenCode-CLI-Prompts-and-Skills/: GEMINI.md  caveman-full-stack-developer.md  caveman-hardware-design-functional.md
skills/gondor/antigravity/BOTOOM__google-antigravity-bin-arch/: release-on-master.yml  update.yml
skills/gondor/antigravity/Belal33__antigravity-mobile-proxy/: bug_report.md  feature_request.md  update-baseknowlage.md
skills/gondor/antigravity/BhrennoBorges__SPEC-Driven-Development-no-Google-Antigravity/: constitution.md
skills/gondor/antigravity/Draculabo__AntigravityManager/: format.yaml  lint.yaml
skills/gondor/antigravity/Kazuki-0147__Antigravity-Proxy/: binary-release.yml  docker-publish.yml
skills/gondor/antigravity/MichaelZelbel__awesome-antigravity/: code-review-assistant.md  coding-agent-bug-investigation-brief-generator.md  create-validations-workflow.md  modern-logo-generator.md
skills/gondor/antigravity/NDDev-it-com__rldyour-antigravity-cli/: antigravity-cli-specialist.md  archive-hygiene.yml  release.yml
skills/gondor/antigravity/NhatMinh171003__multi-agent-antigravity/: MULTI_AGENT_PIPELINE.md  README.md  USER_GUIDE.md  convert_icons.py  hub_database.py  hub_server.py  poll_coder.py  poll_reporter.py  poll_tester.py  submit_test_report.py  workflow_presentation.md
skills/gondor/antigravity/Spartanx72__Antigravity-Master-Prompt-Source/: debugging-playbook.md  senior-audio-sound-engineer.md  senior-software-engineer.md
skills/gondor/antigravity/Vibe-Marketer__gsd-antigravity/: GEMINI.md
skills/gondor/antigravity/Zaim8797__antigravity-tutorial/: gemini.md
skills/gondor/antigravity/Zaious__Antigravity-Skills-Chronicle/: bug_report.md  feature_request.md  sync-version.md
skills/gondor/antigravity/ai-dev-2024__Antigravity-Manager-Supreme/: release.yml  sync-upstream.yml
skills/gondor/antigravity/aqua__devcontainer-antigravity-cli/: test.yaml
skills/gondor/antigravity/at2008__antigravity-cockpit/: publish.yml
skills/gondor/antigravity/colorcynk__mcp-julia-sdk-dev-antigravity/: core-development-rules.md  julia-code-samples.md  testing-strategy.md
skills/gondor/antigravity/dangindev__antigravity-awesome-workspace-skill/: CLAUDE.md  GEMINI.md  build.md  openspec-apply.prompt.md  test.yml
skills/gondor/claude-code/274326424__video-content-extractor/: SKILL.md
skills/gondor/claude-code/2slides__slides-generation-2slides-skills/: SKILL.md
skills/gondor/claude-code/Apra-Labs__apra-fleet/: SKILL.md
skills/gondor/claude-code/BV-Venky__excalidraw-architect-mcp/: SKILL.md
skills/gondor/claude-code/CNWU16__vedic-astro-skills/: SKILL.md
skills/gondor/claude-code/CodeShuX__mockhunter/: SKILL.md
skills/gondor/claude-code/CodeShuX__tokenwise/: SKILL.md
skills/gondor/claude-code/FluxonLab__Skillry/: SKILL.md
skills/gondor/claude-code/Fmarzochi__EGC/: SKILL.md
skills/gondor/claude-code/IliaMerkurev__ue5-cpp-ai-skill/: SKILL.md
skills/gondor/claude-code/Intelligent-Internet__II-Commons-Skills/: SKILL.md
skills/gondor/claude-code/JasonCheroske__Lab-OS/: SKILL.md
skills/gondor/claude-code/Kingdaddy007__my-os/: README.md
skills/gondor/claude-code/MichaelZelbel__awesome-antigravity/: n8n-vibe-coding-skill.md
skills/gondor/claude-code/MojoAuth__skills/: SKILL.md
skills/gondor/claude-code/bakw00ds__yakos/: SKILL.md  (+6 more)
skills/isengard/: README.md
skills/lothlorien/: README.md
skills/mirkwood/: README.md
skills/mordor/: README.md
skills/moria/: README.md
skills/rivendell/: README.md
skills/rohan/: README.md
skills/the-shire/: README.md
tests/: README.md  conftest.py  test_classify.py  test_cli.py  test_crawler.py  test_dedup.py
(+634 files in other folders)
