[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotr-skills"
version = "1.2.0"
description = "One command to rule all your AI agent skills — smart skills installer for any agentic AI framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ansari Mohammad Bilal", email = "Bilal140202@users.noreply.github.com"}
]
keywords = [
    "agentic-ai", "ai-agents", "claude-code", "cursor", "cline",
    "aider", "openhands", "skills", "cursorrules", "lotr",
    "antigravity", "codex", "agent-skills", "ai-coding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Bilal140202/the-lord-of-the-skills"
Repository = "https://github.com/Bilal140202/the-lord-of-the-skills"
Documentation = "https://github.com/Bilal140202/the-lord-of-the-skills/blob/main/cli/README.md"
Issues = "https://github.com/Bilal140202/the-lord-of-the-skills/issues"
Changelog = "https://github.com/Bilal140202/the-lord-of-the-skills/blob/main/CHANGELOG.md"

# This is the key line — it creates the `lotr` terminal command
[project.scripts]
lotr = "cli.lotr:main"

[tool.setuptools]
packages = ["cli"]

# Include the skills/index.json in the package (needed for offline mode)
[tool.setuptools.package-data]
cli = ["*.py"]
