[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────
#  CORE PACKAGE METADATA
# ─────────────────────────────────────────────
[project]
name = "lotr-skills"
version = "1.2.0"
description = "⚔ One command to install the right AI agent skills for any framework — Claude Code, Cursor, Cline, Codex, Antigravity & more"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Ansari Mohammad Bilal", email = "bilal140202@gmail.com" }
]
keywords = [
  "ai-agents", "skills", "cursor", "claude-code", "cline", "codex",
  "antigravity", "aider", "roo", "llm", "prompt-engineering",
  "mcp", "cursor-rules", "agent-framework", "lotr", "agentic-ai"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.28.0",
  "click>=8.0.0",
]

# ─────────────────────────────────────────────
#  CLI ENTRY POINT
#  This is what creates the `lotr` command
#  after pip install lotr-skills
# ─────────────────────────────────────────────
[project.scripts]
lotr = "cli.lotr:main"

# ─────────────────────────────────────────────
#  URLS (shown on PyPI sidebar)
# ─────────────────────────────────────────────
[project.urls]
Homepage      = "https://github.com/Bilal140202/the-lord-of-the-skills"
Repository    = "https://github.com/Bilal140202/the-lord-of-the-skills"
Documentation = "https://github.com/Bilal140202/the-lord-of-the-skills/blob/main/QUICKSTART.md"
"Bug Tracker" = "https://github.com/Bilal140202/the-lord-of-the-skills/issues"
Changelog     = "https://github.com/Bilal140202/the-lord-of-the-skills/blob/main/CHANGELOG.md"

# ─────────────────────────────────────────────
#  HATCHLING BUILD CONFIG
#  Tells hatchling where to find cli/ folder
#  and which files to include/exclude
# ─────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.sdist]
exclude = [
  "skills/",       # 18,000 files — never bundle these
  "crawler/",
  "catalogs/",
  "assets/",
  "docs/",
  "tests/",
  ".github/",
]

# ─────────────────────────────────────────────
#  PYTEST CONFIG
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# ─────────────────────────────────────────────
#  OPTIONAL: dev dependencies
#  Install with: pip install lotr-skills[dev]
# ─────────────────────────────────────────────
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "build>=0.10",
  "twine>=4.0",
]
