[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lord-of-the-skills-crawler"
version = "1.3.0"
description = "Spider GitHub for agentic AI skills, agents, and rules — organized into 10 LOTR-themed kingdoms."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ansari Mohammad Bilal", email = "Bilal140202@users.noreply.github.com"}
]
keywords = ["agentic-ai", "claude-code", "cursor", "cline", "aider", "openhands", "skills", "agents-md", "lotr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "requests-cache>=1.3.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "pypdf>=4.0.0",
    "pypdfium2>=5.0.0",
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "playwright>=1.50.0",
]
browser = [
    "playwright>=1.50.0",
]

[project.urls]
Homepage = "https://github.com/Bilal140202/the-lord-of-the-skills"
Repository = "https://github.com/Bilal140202/the-lord-of-the-skills"
Documentation = "https://github.com/Bilal140202/the-lord-of-the-skills/blob/main/crawler/README.md"
Issues = "https://github.com/Bilal140202/the-lord-of-the-skills/issues"
Changelog = "https://github.com/Bilal140202/the-lord-of-the-skills/blob/main/CHANGELOG.md"

[project.scripts]
lotr-crawl = "crawler.crawler:main"
lotr-classify = "crawler.classify:main"
lotr-dedup = "crawler.dedup:main"

[tool.setuptools]
packages = ["crawler"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=crawler",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
